...
            "state" : "translated",
            "value" : "日誌級別"
          }
        }
      }
    },
    "Logs" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "گزارش"
          }
...
            "state" : "translated",
            "value" : "服務未啟動"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تنظیمات"
          }
...
